--- a/config.org
+++ b/config.org
@@ -1,4 +1,4 @@
- #+TITLE:Colten's GNU Emacs Config
+#+TITLE:Colten's GNU Emacs Config
 #+AUTHOR: Colten Begle
 #+Description: Colten's personal Emacs config.
 #+STARTUP: showeverything
@@ -71,43 +71,43 @@
      :after evil
      :ensure t
      :config
-     (evil-collection-init '(magit)))
+     (evil-collection-init '(magit dired)))
 #+end_src
 
 ** General Keybinds
 #+begin_src emacs-lisp
-   (use-package general
-     :straight t
-     :config
-     (general-evil-setup)
+  (use-package general
+    :straight t
+    :config
+    (general-evil-setup)
 
-     ;; set up 'SPC' as the global leader key
-     (general-create-definer cb/leader-keys
-       :states '(normal insert visual emacs)
-       :keymaps 'override
-       :prefix "SPC" ;; set leader
-       :global-prefix "M-SPC")) ;; access leader in insert mode
+    ;; set up 'SPC' as the global leader key
+    (general-create-definer cb/leader-keys
+      :states '(normal insert visual emacs)
+      :keymaps 'override
+      :prefix "," ;; set leader
+      :global-prefix "M-,")) ;; access leader in insert mode
 
-   (cb/leader-keys
-     "b" '(:ignore t :wk "Buffer")
-     "b b" '(switch-to-buffer :wk "Switch buffer")
-     "b i" '(ibuffer :wk "IBuffer")
-     "b k" '(kill-this-buffer :wk "Kill this buffer")
-     "b n" '(next-buffer :wk "Next buffer")
-     "b p" '(previous-buffer :wk "Previous buffer")
-     "b r" '(revert-buffer :wk "Reload buffer"))
+  (cb/leader-keys
+    "b" '(:ignore t :wk "Buffer")
+    "b b" '(switch-to-buffer :wk "Switch buffer")
+    "b i" '(ibuffer :wk "IBuffer")
+    "b k" '(kill-this-buffer :wk "Kill this buffer")
+    "b n" '(next-buffer :wk "Next buffer")
+    "b p" '(previous-buffer :wk "Previous buffer")
+    "b r" '(revert-buffer :wk "Reload buffer"))
 
-   (cb/leader-keys
-     "f" '(:ignore t :wk "file")
-     "f f" '(find-file :wk "Find file"))
+  (cb/leader-keys
+    "f" '(:ignore t :wk "file")
+    "f f" '(find-file :wk "Find file"))
 
-   (cb/leader-keys
-     "e" '(:ignore t :wk "Evaluate")
-     "e b" '(eval-buffer :wk "Evaluate elisp in buffer")
-     "e d" '(eval-defun :wk "Evaluate defun containing or after point")
-     "e e" '(eval-expression :wk "Evalaute an elisp expression")
-     "e l" '(eval-last-sexp :wk "Evaluate elisp expression before point")
-     "e r" '(eval-region :wk "Evaluate elisp in region"))
+  (cb/leader-keys
+    "e" '(:ignore t :wk "Evaluate")
+    "e b" '(eval-buffer :wk "Evaluate elisp in buffer")
+    "e d" '(eval-defun :wk "Evaluate defun containing or after point")
+    "e e" '(eval-expression :wk "Evalaute an elisp expression")
+    "e l" '(eval-last-sexp :wk "Evaluate elisp expression before point")
+    "e r" '(eval-region :wk "Evaluate elisp in region"))
 #+end_src
 
 * ORG MODE
