Updated fonts and added the vterm package.

--- a/config.org
+++ b/config.org
@@ -22,6 +22,7 @@
 - [[#lsp][LSP]]
 - [[#company][COMPANY]]
 - [[#magit][MAGIT]]
+- [[#vterm][VTERM]]
 
 * IMPORTANT PROGRAMS TO LOAD FIRST
 ** Package Manager
@@ -131,15 +132,15 @@
 ** Fonts
 #+begin_src emacs-lisp
   (set-face-attribute 'default nil
-    :font "JetBrains Mono Nerd Font"
+    :font "Iosevka Nerd Font"
     :height 110
     :weight 'medium)
   (set-face-attribute 'variable-pitch nil
-    :font "Ubuntu"
+    :font "Iosevka Nerd Font"
     :height 120
     :weight 'medium)
   (set-face-attribute 'fixed-pitch nil
-    :font "JetBrains Mono Nerd Font"
+    :font "Iosevka Nerd Font"
     :height 110
     :weight 'medium)
   ;; Makes commented text and keywords italics.
@@ -150,7 +151,7 @@
   (set-face-attribute 'font-lock-keyword-face nil
     :slant 'italic)
 
-  (add-to-list 'default-frame-alist '(font . "JetBrains Mono Nerd Font-11"))
+  (add-to-list 'default-frame-alist '(font . "Iosevka Nerd Font-11"))
 
   (setq-default line-spacing 0.12)
 #+end_src
@@ -171,6 +172,7 @@
 #+begin_src emacs-lisp
   (global-display-line-numbers-mode 1)
   (global-visual-line-mode t)
+  (setq display-line-numbers 'relative)
 #+end_src
 
 * WHICH-KEY
@@ -260,4 +262,10 @@
 #+begin_src emacs-lisp
   (use-package magit
     :straight t)
+#+end_src
+
+* VTERM
+#+begin_src emacs-lisp
+  (use-package vterm
+    :load-path "/home/colten/.config/emacs/modules/emacs-libvterm/")
 #+end_src
